--- a/html/style.css
+++ b/html/style.css
@@ -1,4 +1,3 @@
-
 /* Base CSS */
 .alignleft {
     float: left;
@@ -29,41 +28,36 @@ h6 {
     font-family: 'Yeseva One', cursive;
 }
 html,
-body { height: 100%; }
+body { height: 100% }
 body {
     font-family: 'Gentium Book Basic', serif;
     font-size: 16px;
 }
 a {
-    -moz-transition: 0.3s;
-    -o-transition: 0.3s;
     -webkit-transition: 0.3s;
     transition: 0.3s;
     color: #333;
     font-family: 'Lato', sans-serif;
 }
 a:hover { text-decoration: none }
-
 .sticky-wrapper {
     width: 100%;
     z-index: 999;
     position: absolute;
     top: 0;
 }
-.logo img{
+.logo img {
     height: 90px;
     display: inline-block;
 }
 .header-area:after,
 .logo img,
 .mainmenu ul.nav.navbar-nav li a,
-.social-link{
-    transition: all .4s ;
-}
-
-.is-sticky .header-area:after{
+.social-link { -webkit-transition: all .4s; transition: all .4s }
+.is-sticky .header-area:after {
     background: #000;
     opacity: .8;
+    filter: alpha(opacity=80);
     position: absolute;
     left: 0;
     top: 0;
@@ -72,30 +66,18 @@ a:hover { text-decoration: none }
     content: "";
     z-index: -1;
 }
-
 .is-sticky .logo img {
     height: 65px;
     width: auto;
     padding: 5px 0;
 }
-
-.is-sticky .mainmenu ul.nav.navbar-nav li a {
-    padding: 1.375em 0.9375em;
-}
-
-.is-sticky .mainmenu ul.nav.navbar-nav li.active a {
-    color: #cc9900;
-}
-
-
-.is-sticky .social-link {
-    top: 25px;
-}
+.is-sticky .mainmenu ul.nav.navbar-nav li a { padding: 1.375em 0.9375em }
+.is-sticky .mainmenu ul.nav.navbar-nav li.active a { color: #cc9900 }
+.is-sticky .social-link { top: 25px }
 .top-area {
     position: relative;
     background: #111;
 }
-
 .top-area-bg {
     background-size: cover;
     height: 100%;
@@ -106,70 +88,55 @@ a:hover { text-decoration: none }
     height: 100%;
     background-attachment: fixed;
     opacity: .5;
+    filter: alpha(opacity=50);
 }
-
-.slider-bg-1{
-    background-image: url(img/header-bg-2.jpg);
-}
-
-.slider-bg-2{
-    background-image: url(img/header-bg-3.jpg);
-}
-
+.slider-bg-1 { background-image: url(img/header-bg-2.jpg) }
+.slider-bg-2 { background-image: url(img/header-bg-3.jpg) }
 .slide-control {
     position   : absolute;
     top        : 50%;
-    z-index    : 999;
+    z-index    : 1;
     font-size  : 80px;
     left       : 30px;
     right      : auto;
     color      : #fff;
     margin-top : -80px;
     opacity    : .2;
+    filter: alpha(opacity=20);
 }
-.slide-control:hover{
+.slide-control:hover {
     opacity    : 1;
+    filter: alpha(opacity=100);
     color      : #fff;
 }
-.slide-control.right{
+.slide-control.right {
     left: auto;
     right: 30px;
 }
-
 #top-slider-carousel.carousel-fade .carousel-inner .item {
-  -webkit-transition-property: opacity;
-          transition-property: opacity;
+    -webkit-transition-property: opacity;
+    transition-property: opacity;
 }
 #top-slider-carousel.carousel-fade .carousel-inner .item,
 #top-slider-carousel.carousel-fade .carousel-inner .active.left,
-#top-slider-carousel.carousel-fade .carousel-inner .active.right {
-  opacity: 0;
-}
+#top-slider-carousel.carousel-fade .carousel-inner .active.right { opacity: 0; filter: alpha(opacity=0) }
 #top-slider-carousel.carousel-fade .carousel-inner .active,
 #top-slider-carousel.carousel-fade .carousel-inner .next.left,
-#top-slider-carousel.carousel-fade .carousel-inner .prev.right {
-  opacity: 1;
-}
+#top-slider-carousel.carousel-fade .carousel-inner .prev.right { opacity: 1; filter: alpha(opacity=100) }
 #top-slider-carousel.carousel-fade .carousel-inner .next,
 #top-slider-carousel.carousel-fade .carousel-inner .prev,
 #top-slider-carousel.carousel-fade .carousel-inner .active.left,
 #top-slider-carousel.carousel-fade .carousel-inner .active.right {
-  left: 0;
-  -webkit-transform: translate3d(0, 0, 0);
-          transform: translate3d(0, 0, 0);
+    left: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
 }
-#top-slider-carousel.carousel-fade .carousel-control {
-  z-index: 2;
-}
-
+#top-slider-carousel.carousel-fade .carousel-control { z-index: 2 }
 /*#top-slider-carousel.carousel,
 .carousel-inner,
 .carousel-inner .item {
   height: 100%;
 }*/
-
-
-
 ul.nav.navbar-nav {
     float: none;
     font-size: 18px;
@@ -180,12 +147,9 @@ ul.nav.navbar-nav li {
     float: none;
     position: relative;
 }
-ul.nav.navbar-nav li a{
-       transition: all .5s linear;
-}
-ul.nav.navbar-nav li a:hover,ul.nav.navbar-nav li a:focus{
-    background-color: transparent;
-}
+ul.nav.navbar-nav li a { -webkit-transition: all .5s linear; transition: all .5s linear }
+ul.nav.navbar-nav li a:hover,
+ul.nav.navbar-nav li a:focus { background-color: transparent }
 ul.nav.navbar-nav li:hover:before,
 ul.nav.navbar-nav li.active:before {
     content: "";
@@ -196,19 +160,15 @@ ul.nav.navbar-nav li.active:before {
     left: 0;
     top: 0;
 }
-ul.nav.navbar-nav li a{
+ul.nav.navbar-nav li a {
     color: #fff;
     padding: 2.500em 0.938em;
 }
-
-.header-text-area{
+.header-text-area {
     position: relative;
     padding-top: 80px;
 }
-
-.header-text{
-    padding: 100px 0;
-}
+.header-text { padding: 100px 0 }
 .header-text h2 {
     background: url(img/line_symbol.png) no-repeat;
     font-size: 4.375em;
@@ -230,7 +190,7 @@ ul.nav.navbar-nav li a{
     text-decoration : none;
     border          : 1px solid rgba(0, 0, 0, 0.5);
 }
-.btn-filled::after {
+.btn-filled:after {
     background     : #000 none repeat scroll 0 0;
     content        : "";
     height         : 100%;
@@ -240,27 +200,20 @@ ul.nav.navbar-nav li a{
     width          : 100%;
     z-index        : -1;
     opacity        : .7;
+    filter: alpha(opacity=70);
     -khtml-opacity : 0.5;
     -ms-filter     : "progid:DXImageTransform.Microsoft.Alpha(Opacity = 70)";
 }
-.btn-filled:hover{
-    color: #fff;
-}
-.btn-filled.btn-menu{
-    border: 1px solid rgba(255, 255, 255, 0.5);
-}
-.btn-filled.btn-menu::after{
+.btn-filled:hover { color: #fff }
+.btn-filled.btn-menu { border: 1px solid rgba(255, 255, 255, 0.5) }
+.btn-filled.btn-menu:after {
     background     : #fff none repeat scroll 0 0;
     opacity        : .28;
+    filter: alpha(opacity=28);
     -khtml-opacity : 0.5;
     -ms-filter     : "progid:DXImageTransform.Microsoft.Alpha(Opacity = 28)";
 }
-
-.btn-filled.btn-menu:hover{
-    color: #fff;
-}
-
-
+.btn-filled.btn-menu:hover { color: #fff }
 .mainmenu {
     padding-right : 90px;
     position      : relative;
@@ -275,26 +228,18 @@ ul.nav.navbar-nav li a{
     font-size: 20px;
     padding-left: 20px;
 }
-.about-area{
-  background-image: url("img/about-section-pattern.png");
-}
-.section-padding{
-    padding: 80px 0;
-}
-.section-title{
+.about-area { background-image: url("img/about-section-pattern.png") }
+.section-padding { padding: 80px 0 }
+.section-title {
     background: rgba(0,0,0,0) url(img/section-title-pattern.png) no-repeat scroll center bottom;
     color: #cc9900;
     font-size: 36px;
-   padding-bottom: 35px;
-   margin-bottom: 20px;
-   text-align: center;
+    padding-bottom: 35px;
+    margin-bottom: 20px;
+    text-align: center;
 }
-.about-text{
-    margin-top: 20px;
-}
-.igredients-area{
-    position: relative;
-}
+.about-text { margin-top: 20px }
+.igredients-area { position: relative }
 .parallax-bg {
     position: absolute;
     left: 0;
@@ -304,24 +249,21 @@ ul.nav.navbar-nav li a{
     background-size: cover;
     background-attachment: fixed!important;
 }
-.igredients-bg{
-    background-image: url(img/s-2.jpg);
-}
-.igredients-text{
+.igredients-bg { background-image: url(img/s-2.jpg) }
+.igredients-text {
     position: relative;
     z-index: 1;
     color: #fff;
     padding: 30px;
 }
-.igredients-text p{
-    margin-bottom: 30px;
-}
-.section-title.white-section-title, .footer-area .footer-widget .section-title{
+.igredients-text p { margin-bottom: 30px }
+.section-title.white-section-title,
+.footer-area .footer-widget .section-title {
     background-image: url(img/section-title-pattern-white.png);
     color: #fff;
 }
-
-.igredients-text:after, .testimonial-list:after{
+.igredients-text:after,
+.testimonial-list:after {
     position       : absolute;
     top            : 0;
     left           : 0;
@@ -331,42 +273,33 @@ ul.nav.navbar-nav li a{
     content        : "";
     z-index        : -1;
     opacity        : .65;
+    filter: alpha(opacity=65);
     -khtml-opacity : 0.5;
     -ms-filter     : "progid:DXImageTransform.Microsoft.Alpha(Opacity = 65)";
 }
-.food-menu-area{
-    background: #ECF0F0 url(img/food-menu-pattern.png) ;
-}
-.single-food-menu-item {
-    margin-bottom: 40px;
-}
-
-.single-food-menu-item h2{
+.food-menu-area { background: #ECF0F0 url(img/food-menu-pattern.png) }
+.single-food-menu-item { margin-bottom: 40px }
+.single-food-menu-item h2 {
     padding-bottom : 10px;
     color          : #c89f2d;
-    background     : rgba(0,0,0,0) url(img/single-food-item-pattern.png) no-repeat scroll center bottom;
+    border-bottom: 1px solid rgba(200, 159, 45, 0.42);
     font-size      : 20px;
     font-weight    : normal;
 }
-
-
-.single-food-menu-item h2>span{
+.single-food-menu-item h2>span {
     float       : right;
     font-weight : normal;
 }
-
-.single-food-menu-item p{
+.single-food-menu-item p {
     font-size: 15px;
     color: #4c4c4c;
     margin: 0;
 }
-
 .single-food-menu-item.special {
     border: 1px solid rgba(204, 153, 0, 0.36);
     padding: 10px;
     position: relative;
 }
-
 .single-food-menu-item.special:before {
     content    : "Special";
     position   : absolute;
@@ -377,33 +310,23 @@ ul.nav.navbar-nav li a{
     color      : #fff;
     padding    : 0 2px;
 }
-
-.testimonial-area{
-    position: relative;
-}
-.testimonial-bg{
-    background-image: url(img/testimonial-bg-1.jpg);
-}
-
-.testimonial-list{
+.testimonial-area { position: relative }
+.testimonial-bg { background-image: url(img/testimonial-bg-1.jpg) }
+.testimonial-list {
     position : relative;
     z-index  : 1;
     padding  : 50px;
 }
-
-
-.single-testimonial-item p{
+.single-testimonial-item p {
     font-size   : 25px;
     color       : #dde0df;
     line-height : 40px;
 }
-
-.single-testimonial-item p.testimonial-author{
+.single-testimonial-item p.testimonial-author {
     font-size  : 18px;
     margin-top : 30px;
 }
-
-#testimonial-carousel:before{
+#testimonial-carousel:before {
     content     : "\f10d";
     font-family : FontAwesome;
     font-size   : 35px;
@@ -413,38 +336,29 @@ ul.nav.navbar-nav li a{
     left        : -30px;
     top         : -17px;
 }
-
-.contact-us-area{
-    background-image: url(img/contact-us-pattern.png);
-}
-
-.contact-form{
-    margin-top: 35px;
-}
+.contact-us-area { background-image: url(img/contact-us-pattern.png) }
+.contact-us-area img { display: inline-block }
+.contact-form { margin-top: 35px }
 .contact-form input[type= "text"],
-.contact-form select{
-   border        : 1px solid #c89f2d;
-   border-radius : 0;
-   font-family   : 'Open Sans', sans-serif;
-   font-style    : italic;
-   font-weight   : 400;
-   margin-bottom : 20px;
+.contact-form select {
+    border        : 1px solid #c89f2d;
+    border-radius : 0;
+    font-family   : 'Open Sans', sans-serif;
+    font-style    : italic;
+    font-weight   : 400;
+    margin-bottom : 20px;
 }
-.contact-form input[type= "text"]:focus, 
-.contact-form select:focus{
+.contact-form input[type= "text"]:focus,
+.contact-form select:focus {
     border-color       : #c89f2d;
     outline            : 0;
-    -webkit-box-shadow : none ;
     box-shadow         : none;
 }
-
-
-.contact-form label{
+.contact-form label {
     color     : #c89f2d;
     font-size : 14px;
 }
-
-.contact-form  .btn-book-now{
+.contact-form  .btn-book-now {
     color            : #fff;
     font-weight      : normal;
     background-color : #c9a131;
@@ -454,31 +368,24 @@ ul.nav.navbar-nav li a{
     width            : 200px;
     margin-top       : 26px;
 }
-
-.footer-area{
+.footer-area {
     background-color : #191919;
     color            : #fff;
     padding          : 30px 0;
 }
-
-.footer-area .footer-widget .section-title{
-    font-size        : 20px;
-}
-
-.footer-area .footer-widget p{
+.footer-area .footer-widget .section-title { font-size        : 20px }
+.footer-area .footer-widget p {
     font-size   : 15.3px;
     margin      : 0;
     line-height : 25px;
 }
-
-.footer-area .footer-widget .footer-cards, 
+.footer-area .footer-widget .footer-cards,
 .footer-area .footer-widget .footer-social-icon {
     margin-top : 50px;
     font-size  : 18px;
 }
-
 .footer-area .footer-widget .footer-cards i,
-.footer-area .footer-widget .footer-social-icon i{
+.footer-area .footer-widget .footer-social-icon i {
     margin : 0 2.5px;
     color  : #fff;
 }
